exports[`test arrowStyle returns css for arrow placement 1`] = `
Object {
  "marginLeft": "0%",
}
`;

exports[`test arrowStyle returns css for arrow placement 2`] = `
Object {
  "marginLeft": "50%",
}
`;

exports[`test renders with props 1`] = `
<div className="toggle push-bottom soft-sides" style={{...}}>
<div data-toggle={0} className="transition text-center toggle__item toggle__item--active" style={{...}} onClick={[Function]} />
<div data-toggle={1} className="transition text-center toggle__item" style={{...}} onClick={[Function]} />
<div className="grid text-left toggle-arrow soft-sides">
<div className="transition grid__item hard one-half toggle-arrow__item" style={{...}} />
</div>
</div>
`;

exports[`test toggleClasses renders active classes 1`] = `"transition text-center toggle__item toggle__item--active"`;

exports[`test toggleClasses renders default classes 1`] = `"transition text-center toggle__item"`;
